Salesforce CPQ/main/default/objects/ProductOption__c/ProductOption__c.object-meta.xml
<CustomObject>
    <customHelpPage>ProductOptionHelp</customHelpPage>
    <description>Option for a configurable product.</description>
    <label>Product Option</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>