Salesforce CPQ/main/default/objects/ProductOption__c/fields/AppliedImmediatelyContext__c.field-meta.xml
<CustomField>
    <fullName>AppliedImmediatelyContext__c</fullName>
    <description>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</description>
    <inlineHelpText>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</inlineHelpText>
    <label>Apply Immediately Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>On Selection</fullName>
            </value>
            <value>
                <fullName>On Quantity Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>