Salesforce CPQ/main/default/objects/ProductOption__c/fields/ComponentCodePosition__c.field-meta.xml
<CustomField>
    <fullName>ComponentCodePosition__c</fullName>
    <description>Position of this component in the generated product code for the configuration.</description>
    <inlineHelpText>Position of this component in the generated product code for the configuration.</inlineHelpText>
    <label>Component Code Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>