Salesforce CPQ/main/default/objects/ProductOption__c/fields/ComponentDescriptionPosition__c.field-meta.xml
<CustomField>
    <fullName>ComponentDescriptionPosition__c</fullName>
    <description>Position of this component in the generated product description for the configuration.</description>
    <inlineHelpText>Position of this component in the generated product description for the configuration.</inlineHelpText>
    <label>Component Description Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>