Salesforce CPQ/main/default/objects/ProductOption__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Feature that selects this option.</description>
    <inlineHelpText>Enter or lookup the feature that includes this option. This will be dependent on the Configured SKU.</inlineHelpText>
    <label>Feature</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ConfiguredSKU__c</field>
            <operation>equals</operation>
            <valueField>ProductFeature__c.ConfiguredSKU__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductFeature__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>