Salesforce CPQ/main/default/objects/ProductOption__c/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <description>Maximum quantity allowed for this option.</description>
    <inlineHelpText>Maximum quantity allowed for this option.</inlineHelpText>
    <label>Max Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>