Salesforce CPQ/main/default/objects/ProductOption__c/fields/PriceEditable__c.field-meta.xml
<CustomField>
    <fullName>PriceEditable__c</fullName>
    <description>Brings over the value of Price Editable field on the optional SKU in order to avoid loading optional product just to know if the price is editable.</description>
    <formula>IF(OptionalSKU__r.PriceEditable__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <inlineHelpText>Select to mark the price as editable, allowing users to make changes to option prices.</inlineHelpText>
    <label>Price Editable</label>
    <type>Text</type>
</CustomField>