Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Product Code for the optional product SKU.</description>
    <formula>OptionalSKU__r.ProductCode</formula>
    <inlineHelpText>Product Code for the optional product SKU.</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>