Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>ProductConfigurationType__c</fullName>
    <description>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</description>
    <formula>TEXT(OptionalSKU__r.ConfigurationType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</inlineHelpText>
    <label>Product Configuration Type</label>
    <type>Text</type>
</CustomField>