Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <description>Description for the optional SKU.</description>
    <formula>OptionalSKU__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Description for the optional SKU.</inlineHelpText>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>