Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <description>Product Family for the optional product SKU.</description>
    <formula>TEXT(OptionalSKU__r.Family)</formula>
    <inlineHelpText>Product Family for the optional product SKU.</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>