Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Name for the optional SKU.</description>
    <formula>OptionalSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name for the optional SKU.</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>