Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductQuantityScale__c.field-meta.xml
<CustomField>
    <fullName>ProductQuantityScale__c</fullName>
    <description>Specifies the number of decimal places used in the Quantity field.</description>
    <formula>OptionalSKU__r.QuantityScale__c</formula>
    <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
    <label>Product Quantity Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>