Salesforce CPQ/main/default/objects/ProductOption__c/fields/ProductSubscriptionPricing__c.field-meta.xml
<CustomField>
    <fullName>ProductSubscriptionPricing__c</fullName>
    <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
    <formula>TEXT(OptionalSKU__r.SubscriptionPricing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
    <label>Product Subscription Pricing</label>
    <type>Text</type>
</CustomField>