Salesforce CPQ/main/default/objects/ProductOption__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of the related product that should be added to the quote.</description>
    <inlineHelpText>Quantity of the related product that should be added to the quote.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>