Salesforce CPQ/main/default/objects/ProductOption__c/fields/QuantityEditable__c.field-meta.xml
<CustomField>
    <fullName>QuantityEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
    <inlineHelpText>Check to allow quantity to be edited even though it&apos;s specified on the option.</inlineHelpText>
    <label>Quantity Editable</label>
    <type>Checkbox</type>
</CustomField>