Salesforce CPQ/main/default/objects/ProductOption__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this option should be selected by default.</description>
    <inlineHelpText>Select the checkbox if this product option should be automatically selected by default.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>