Salesforce CPQ/main/default/objects/ProductOption__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
    <inlineHelpText>Select the checkbox to indicate this option is managed by the system which makes it unavailable for user selection.</inlineHelpText>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>