Salesforce CPQ/main/default/objects/ProductOption__c/validationRules/Cannot_Bundle_Evergreen_Renewable_SKUs.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Bundle_Evergreen_Renewable_SKUs</fullName>
    <active>true</active>
    <description>The Evergreen and Renewable bundle cannot coexist in a bundle</description>
    <errorConditionFormula>AND(OR(AND(ISPICKVAL( ConfiguredSKU__r.SubscriptionType__c , &apos;Evergreen&apos;), ISPICKVAL( OptionalSKU__r.SubscriptionType__c ,&apos;Renewable&apos;)),AND(ISPICKVAL( ConfiguredSKU__r.SubscriptionType__c , &apos;Renewable&apos;),ISPICKVAL( OptionalSKU__r.SubscriptionType__c ,&apos;Evergreen&apos;))))</errorConditionFormula>
    <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
</ValidationRule>