Salesforce CPQ/main/default/objects/ProductOption__c/validationRules/Cannot_Have_RenewableEvergreen_In_Bundle.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Have_RenewableEvergreen_In_Bundle</fullName>
    <active>true</active>
    <description>The bundle cannot have configured or optional SKU subscription type as Renewable/Evergreen</description>
    <errorConditionFormula>AND(OR(ISPICKVAL( ConfiguredSKU__r.SubscriptionType__c , &apos;Renewable/Evergreen&apos;),ISPICKVAL( OptionalSKU__r.SubscriptionType__c ,&apos;Renewable/Evergreen&apos;)))</errorConditionFormula>
    <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
</ValidationRule>